Replace Collectors.toList() with .toList() in DefaultProjectBuilder
Use Java 17+ Stream.toList() instead of Collectors.toList().

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>